--- a/css/payments.css
+++ b/css/payments.css
@@ -13,6 +13,8 @@ body
     font-size: 15px;
     margin: 0;
     text-align: center;
+    -webkit-font-smoothing: auto !important;
+    -moz-osx-font-smoothing: auto !important;
 }
 
 #logovime
